[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "branch"
version = "0.1.0"
description = "Branching shape analysis"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["geomorphology", "valley", "centerline", "width", "GIS", "raster"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "networkx",
    "rasterio",
    "shapely",
    "geopandas",
    "xarray",
    "rioxarray",
    "scikit-fmm>=2025.6.23",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "matplotlib",
    "ipykernel"
]

[tool.hatch.build.targets.wheel]
packages = ["branch"]

[tool.hatch.build.targets.wheel.shared-data]
"branch/sample_data" = "branch/sample_data"

[dependency-groups]
dev = [
    "snakeviz>=2.2.2",
]
