[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "branch"
version = "0.1.0"
description = "Segment and measure binary branching shapes: centerline extraction, hierarchical space partitioning, and width interpolation"
keywords = [
    "centerline",
    "skeleton",
    "medial-axis",
    "segmentation",
    "raster",
    "geomorphology",
    "river",
    "valley",
    "morphometry",
    "width",
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "networkx",
    "rasterio",
    "shapely",
    "geopandas",
    "xarray",
    "rioxarray",
    "scikit-fmm>=2025.6.23",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "snakeviz"
]

[tool.hatch.build.targets.wheel]
packages = ["branch"]

[tool.hatch.build.targets.wheel.shared-data]
"branch/data" = "branch/data"
